--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,31 @@
 [project]
-name = "QA-Mac"
-version = "0.1.0"
-description = "Default template for PDM package"
-authors = [
-    {name = "尼诺", email = "ninuo@eastgarden.com"},
-]
-dependencies = [
-    "click>=8.1.7",
-    "markdownify>=0.12.1",
-]
+dependencies = []
 requires-python = ">=3.12"
-readme = "README.md"
-license = {text = "MIT"}
-
-[build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
-
-[project.scripts]
-qa = "qa:cli"
-
-[tool.pdm.scripts]
-qa = {call = "qa:cli"}
-
-[tool.pdm]
-distribution = true
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "pip>=24.0",
+    "-e pkg-core @ file:///${PROJECT_ROOT}/packages/pkg-core",
+    "-e pkg-cli @ file:///${PROJECT_ROOT}/packages/pkg-cli",
+    "-e pkg-server @ file:///${PROJECT_ROOT}/packages/pkg-server",
+    "ruff>=0.4.3",
+    "mypy>=1.10.0",
+    "types-protobuf>=5.26.0.20240422",
 ]
+
+[tool.pdm.scripts]
+
+ruff = "ruff check"
+mypy = "mypy packages"
+lint = {composite = ["ruff", "mypy"]}
+
+server_test.cmd = "uvicorn src.server.main:app"
+server_test.env_file = ".env.test"
+
+query = {call = "cli.endpoint:cli"}
+
+[tool.ruff]
+src = ["packages/pkg-core", "packages/pkg-cli", "packages/pkg-server"]
+
+[tool.ruff.lint]
+fixable = ["ALL"]
+ignore = ["F401"]
