--- a/packages/pkg-core/pyproject.toml
+++ b/packages/pkg-core/pyproject.toml
@@ -7,8 +7,8 @@ authors = [
 ]
 dependencies = [
     "protobuf>=5.26.1",
-    "motor[srv]>=3.4.0",
-    "beanie>=1.25.0",
+    "sqlalchemy[asyncio]>=2.0.30",
+    "psycopg[binary]>=3.1.19",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
