--- a/packages/pkg-server/.gitignore
+++ b/packages/pkg-server/.gitignore
@@ -122,7 +122,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env.template
+.env
 .venv
 env/
 venv/
@@ -160,7 +160,3 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-.idea
-.env.test
-.DS_Store
-config_test.toml
