--- a/packages/pkg-server/pyproject.toml
+++ b/packages/pkg-server/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
     "psycopg[binary]>=3.1.19",
     "python-dotenv>=1.0.1",
     "djangorestframework>=3.15.1",
+    "OpenAI>=1.30.1",
+    "pgvector>=0.2.5",
+    "tiktoken>=0.7.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
