--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
       "**/__pycache__": true,
       "**/.mypy_cache": true,
       ".pdm-python": true,
-      "**/.pdm-build": true
+      "**/.pdm-build": true,
+      ".venv": true 
     }
   }
