--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ ruff = "ruff check"
 mypy = "mypy packages"
 lint = {composite = ["ruff", "mypy"]}
 
-server_test.cmd = "uvicorn agent.asgi:application"
+server_test.cmd = "uvicorn agent.asgi:application --host 0.0.0.0 --reload"
 server_test.env_file = ".env.test"
 
 django_manage.cmd = "python packages/pkg-server/manage.py {args}"
