--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dev = [
     "uvicorn>=0.29.0",
     "django-stubs[compatible-mypy]>=5.0.0",
     "ipython>=8.24.0",
+    "pytest>=8.2.1",
 ]
 
 [tool.pdm.scripts]
