feat: add tests

--- a/packages/pkg-core/pyproject.toml
+++ b/packages/pkg-core/pyproject.toml
@@ -20,3 +20,7 @@ build-backend = "pdm.backend"
 
 [project.scripts]
 qa = "q:cli"
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "DEBUG"
