--- a/packages/pkg-core/pyproject.toml
+++ b/packages/pkg-core/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "loci"
+name = "koma"
 version = "0.1.0"
-description = "Default template for PDM package"
+description = "The knowledge of macOS for AI."
 authors = [
     {name = "AFuture", email = "afuture.d@outlook.com"},
 ]
@@ -17,6 +17,3 @@ license = {text = "MIT"}
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
-
-[project.scripts]
-qa = "q:cli"
