--- a/packages/pkg-core/pyproject.toml
+++ b/packages/pkg-core/pyproject.toml
@@ -7,8 +7,7 @@ authors = [
 ]
 dependencies = [
     "protobuf>=5.26.1",
-    "sqlalchemy[asyncio]>=2.0.30",
-    "psycopg[binary]>=3.1.19",
+    "pydantic>=2.7.3",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
@@ -17,3 +16,4 @@ license = {text = "MIT"}
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+[tool.pdm]
