--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
-PGHOST=
-PGDATABASE=
-PGUSER=
-PGPASSWORD=
-OPENAI_API_KEY=
+SERVER_URL='https://example.com'
+
+PGHOST='*.neon.tech'
+PGDATABASE='db_name'
+PGUSER='user_name'
+PGPASSWORD='<password>'
+
+OPENAI_API_KEY='sk-xxx'
+
+CO_API_KEY='xxxxx'
